--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "fabric-loom" version "0.10.+"
+    id "fabric-loom" version "0.12-SNAPSHOT"
     id "maven-publish"
     id "io.freefair.lombok" version "6.1.0-m2"
 }
@@ -14,6 +14,7 @@ group = project.maven_group
 repositories {
     maven { url "https://masa.dy.fi/maven" }
     maven { url "https://maven.terraformersmc.com/releases" }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -27,7 +28,8 @@ dependencies {
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
-    modImplementation "fi.dy.masa.malilib:malilib-fabric-1.18.0:${project.malilib_version}"
+    //modImplementation "fi.dy.masa.malilib:malilib-fabric-1.18.0:${project.malilib_version}"
+    implementation 'com.github.maruohon:malilib:testing~fabric_1.19.x_early_port_2-1e9b3581b9-1'
 
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
     
